--- a/LaChat/vercel.json
+++ b/LaChat/vercel.json
@@ -1,9 +1,9 @@
 {
+    "builds": [
+      { "src": "package.json", "use": "@vercel/node" }
+    ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
   
