--- a/LaChat/vercel.json
+++ b/LaChat/vercel.json
@@ -1,9 +1,16 @@
 {
     "builds": [
-      { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": { "distDir": "dist" }
+      }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
   }
   
